2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Fix staging brain damage.

2007-09-21  Kevin Ryde  <user42@zip.com.au>

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Bind `case-fold-search' to t.

2007-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* wid-edit.el (widget-image-insert): Don't merge mouse-face with
	neighbouring buttons.

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Recognize gcc's use of "note" for informational messages.

2007-09-20  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-validate-buffer): Use paragraph
	motion functions, rather than hard-coding "\n\n".
	(tex-validate-region): Check for eobp, to speed up.
	(tex-next-unmatched-end): Doc fix.

2007-09-19  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-terminate-paragraph):
	Use backward-paragraph.

2007-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/css-mode.el (css-electric-keys): electrick->electric.
	(css-mode): Update correspondingly.

2007-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-extra-menu-map): New var and fun.

	* vc-hooks.el (vc-menu-entry): New var.
	(vc-mode-line-map): Use it so that this menu also uses the extra-menu.
	(menu-bar-tools-menu): Add the VC menu here rather than in menu-bar.el.
	(vc-menu-map): Declare and initialize in one step.

	* menu-bar.el (vc-menu-map): Don't setup any more.
	Instead, just create the proper spot in the menu.

2007-09-18  Dan Nicolaescu  <dann@ics.uci.edu>
	    Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el: Document new VC operation `extra-menu'.

	* vc-hooks.el (vc-default-extra-menu, vc-menu-map-filter): New fun.

2007-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-log-view-mode): Add font-lock patterns for
	Signed-off-by, Acked-by and Merge.

2007-09-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Prefer the